Accidentally changed the background to the wrong color. Fixed now to properly show everything.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ h1,h3 {
     color: purple;
 }
 body {
-    background-color:gray;
+    background-color:lightblue;
 }
 video {
     margin:auto;
